--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,7 @@
 {
   "hosting": {
+    "public": "public",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "/api/get-portal-data",
