--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,11 +9,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      # Uses your FIREBASE_TOKEN secret and firebase.json/.firebaserc
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - uses: actions/setup-node@v4
         with:
-          repoToken: ${{ secrets.GITHUB_TOKEN }}       # allows PR comments; harmless on push to main
-          firebaseToken: ${{ secrets.FIREBASE_TOKEN }} # you already have this secret
-          projectId: gp-member-portal
-          channelId: live
+          node-version: '20'
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools@latest
+      - name: Versions (debug)
+        run: |
+          node -v
+          firebase --version
+      - name: Deploy Hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        run: firebase deploy --only hosting --project gp-member-portal --non-interactive
