--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,12 +12,18 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
+
       - name: Install Firebase CLI
         run: npm install -g firebase-tools@latest
-      - name: Versions (debug)
+
+      - name: Sanity check token can see the project
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
-          node -v
-          firebase --version
+          echo "Listing projects available to this token..."
+          firebase projects:list
+          echo "If 'gp-member-portal' is NOT in the list above, the token is from the wrong Google account."
+
       - name: Deploy Hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
