--- a/firebase.json
+++ b/firebase.json
@@ -5,9 +5,14 @@
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "cleanUrls": true,
     "rewrites": [
-      { "source": "/mint-doc", "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
-      { "source": "/dl",       "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
-      { "source": "/getPortalData", "run": { "serviceId": "get-portal-data", "region": "us-west3" } }
+      { "source": "/api/get-portal-data", "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
+      { "source": "/api/mint-doc",       "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
+      { "source": "/api/dl",             "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
+
+      { "source": "/get-portal-data",    "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
+      { "source": "/getPortalData",      "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
+      { "source": "/mint-doc",           "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
+      { "source": "/dl",                 "run": { "serviceId": "get-portal-data", "region": "us-west3" } }
     ]
   }
 }
