--- a/firebase.json
+++ b/firebase.json
@@ -7,10 +7,9 @@
     "rewrites": [
       { "source": "/api/get-portal-data", "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
       { "source": "/api/mint-doc",       "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
+      { "source": "/api/list-docs",      "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
       { "source": "/api/dl",             "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
 
-      { "source": "/get-portal-data",    "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
-      { "source": "/getPortalData",      "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
       { "source": "/mint-doc",           "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
       { "source": "/dl",                 "run": { "serviceId": "get-portal-data", "region": "us-west3" } }
     ]
