--- a/firebase.json
+++ b/firebase.json
@@ -1,17 +1,16 @@
 {
-  "hosting": {
-    "site": "gp-member-portal",
-    "public": "public",
+  "hosting": [{
+    "site": "allegisgp",
+    "public": ".",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "cleanUrls": true,
     "rewrites": [
       { "source": "/api/get-portal-data", "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
-      { "source": "/api/mint-doc",       "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
-      { "source": "/api/list-docs",      "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
-      { "source": "/api/dl",             "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
-
-      { "source": "/mint-doc",           "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
-      { "source": "/dl",                 "run": { "serviceId": "get-portal-data", "region": "us-west3" } }
+      { "source": "/api/mint-doc",        "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
+      { "source": "/api/list-docs",       "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
+      { "source": "/api/dl",              "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
+      { "source": "/mint-doc",            "run": { "serviceId": "get-portal-data", "region": "us-west3" } },
+      { "source": "/dl",                  "run": { "serviceId": "get-portal-data", "region": "us-west3" } }
     ]
-  }
+  }]
 }
