--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,45 @@
 name: Deploy to Firebase Hosting
+
 on:
   push:
     branches: [ main ]
   workflow_dispatch:
 
+permissions:
+  id-token: write      # <-- required for OIDC
+  contents: read
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      PROJECT_ID: gp-member-portal
+      HOSTING_TARGET: allegisgp
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 20
+
+      # Exchange GitHub OIDC for Google credentials (Workload Identity Federation)
+      - name: Authenticate to Google Cloud (OIDC)
+        uses: google-github-actions/auth@v2
+        with:
+          workload_identity_provider: projects/468716163323/locations/global/workloadIdentityPools/gp-portal-pool/providers/github
+          service_account: github-deployer@gp-member-portal.iam.gserviceaccount.com
+          create_credentials_file: true
+          export_environment_variables: true   # sets GOOGLE_APPLICATION_CREDENTIALS for firebase-tools
 
       - name: Install Firebase CLI
-        run: npm install -g firebase-tools@latest
+        run: npm i -g firebase-tools@latest
 
-      - name: "Sanity check token"
+      - name: Deploy to Firebase Hosting
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          CI: true
         run: |
-          firebase projects:list --project gp-member-portal
-
-      - name: "Deploy Hosting (target allegisgp)"
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        run: |
+          firebase --version
           firebase deploy \
-            --only hosting:allegisgp \
-            --project gp-member-portal \
+            --project "$PROJECT_ID" \
+            --only "hosting:${HOSTING_TARGET}" \
             --non-interactive --debug
